@@ -54,6 +54,7 @@ qGaimPrefsInit(void)
 	gaim_prefs_add_bool("/gaim/qpe/blist/show_offline_buddies", false);
 	gaim_prefs_add_bool("/gaim/qpe/blist/show_empty_groups",    false);
 	gaim_prefs_add_bool("/gaim/qpe/blist/show_idle_times",      true);
+	gaim_prefs_add_bool("/gaim/qpe/blist/show_warning_levels",  true);
 	gaim_prefs_add_bool("/gaim/qpe/blist/show_group_count",     true);
 	gaim_prefs_add_bool("/gaim/qpe/blist/show_large_icons",
 						(QPEApplication::desktop()->width() >= 600));
