@@ -1,3 +1,10 @@
+Tue Nov 11 23:32:05 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	* src/QGaimMainWindow.cpp:
+	  - The Big List (TM) now looks like gtk-gaim's.
+
 Tue Nov 11 17:28:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
